mychart1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogue
spec:
  selector:
    matchLabels:
      app: httpd
  replicas: 2 
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 8020
